tests/rosetta/transpiler/Swift/100-doors.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:12:57: warning: forced cast from '[Bool]' to '[Any]' always succeeds; did you mean to use 'as'?
10 | var doors: [Any] = ([] as! [Any])
11 | for i in 0..<100 {
12 |     doors = ((((doors + [false]) as! [Any]) as! [Bool]) as! [Any])
   |                                                         `- warning: forced cast from '[Bool]' to '[Any]' always succeeds; did you mean to use 'as'?
13 | }
14 | for pass in 1..<101 {

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:11:5: warning: immutable value 'i' was never used; consider replacing with '_' or removing it
 9 | }
10 | var doors: [Any] = ([] as! [Any])
11 | for i in 0..<100 {
   |     `- warning: immutable value 'i' was never used; consider replacing with '_' or removing it
12 |     doors = ((((doors + [false]) as! [Any]) as! [Bool]) as! [Any])
13 | }

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:15:22: warning: forced cast of 'Int' to same type has no effect
13 | }
14 | for pass in 1..<101 {
15 |     var idx = ((pass as! Int) - 1)
   |                      `- warning: forced cast of 'Int' to same type has no effect
16 |     while ((idx as! Int) < 100) {
17 |         doors[idx] = (!((doors as! [Any])[idx] as! Bool))

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:16:17: warning: forced cast of 'Int' to same type has no effect
14 | for pass in 1..<101 {
15 |     var idx = ((pass as! Int) - 1)
16 |     while ((idx as! Int) < 100) {
   |                 `- warning: forced cast of 'Int' to same type has no effect
17 |         doors[idx] = (!((doors as! [Any])[idx] as! Bool))
18 |         idx = (_num(idx) + _num(pass))

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:17:32: warning: forced cast of '[Any]' to same type has no effect
15 |     var idx = ((pass as! Int) - 1)
16 |     while ((idx as! Int) < 100) {
17 |         doors[idx] = (!((doors as! [Any])[idx] as! Bool))
   |                                `- warning: forced cast of '[Any]' to same type has no effect
18 |         idx = (_num(idx) + _num(pass))
19 |     }

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:18:26: error: cannot assign value of type 'Double' to type 'Int'
16 |     while ((idx as! Int) < 100) {
17 |         doors[idx] = (!((doors as! [Any])[idx] as! Bool))
18 |         idx = (_num(idx) + _num(pass))
   |                          `- error: cannot assign value of type 'Double' to type 'Int'
19 |     }
20 | }

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:24:26: warning: forced cast of 'Int' to same type has no effect
22 |     var line = ""
23 |     for col in 0..<10 {
24 |         let idx = (((row as! Int) * 10) + (col as! Int))
   |                          `- warning: forced cast of 'Int' to same type has no effect
25 |         if ((doors as! [Any])[idx] as! Bool) {
26 |             line = ((line + "1") as! String)

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:24:48: warning: forced cast of 'Int' to same type has no effect
22 |     var line = ""
23 |     for col in 0..<10 {
24 |         let idx = (((row as! Int) * 10) + (col as! Int))
   |                                                `- warning: forced cast of 'Int' to same type has no effect
25 |         if ((doors as! [Any])[idx] as! Bool) {
26 |             line = ((line + "1") as! String)

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:25:20: warning: forced cast of '[Any]' to same type has no effect
23 |     for col in 0..<10 {
24 |         let idx = (((row as! Int) * 10) + (col as! Int))
25 |         if ((doors as! [Any])[idx] as! Bool) {
   |                    `- warning: forced cast of '[Any]' to same type has no effect
26 |             line = ((line + "1") as! String)
27 |         } else {

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:26:34: warning: forced cast of 'String' to same type has no effect
24 |         let idx = (((row as! Int) * 10) + (col as! Int))
25 |         if ((doors as! [Any])[idx] as! Bool) {
26 |             line = ((line + "1") as! String)
   |                                  `- warning: forced cast of 'String' to same type has no effect
27 |         } else {
28 |             line = ((line + "0") as! String)

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:28:34: warning: forced cast of 'String' to same type has no effect
26 |             line = ((line + "1") as! String)
27 |         } else {
28 |             line = ((line + "0") as! String)
   |                                  `- warning: forced cast of 'String' to same type has no effect
29 |         }
30 |         if ((col as! Int) < 9) {

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:30:18: warning: forced cast of 'Int' to same type has no effect
28 |             line = ((line + "0") as! String)
29 |         }
30 |         if ((col as! Int) < 9) {
   |                  `- warning: forced cast of 'Int' to same type has no effect
31 |             line = ((line + " ") as! String)
32 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden567897724/001/main.swift:31:34: warning: forced cast of 'String' to same type has no effect
29 |         }
30 |         if ((col as! Int) < 9) {
31 |             line = ((line + " ") as! String)
   |                                  `- warning: forced cast of 'String' to same type has no effect
32 |         }
33 |     }
